--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
   <title>About — AhamStree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
@@ -23,6 +24,9 @@
 
   <div class="container">
     <div class="card" style="padding:22px;border-radius:18px;">
+  <div class="about-grid">
+    <!-- LEFT: Text -->
+    <div>
       <h1>Our Story</h1>
 
       <p>
@@ -52,7 +56,23 @@
         <a class="btn ghost" href="index.html">Home</a>
       </div>
     </div>
+
+    <!-- RIGHT: Image -->
+    <aside class="about-aside">
+      <img
+        class="about-photo"
+        src="assets/images/nisha.jpg"
+        alt="Founder of AhamStree"
+        loading="lazy"
+      />
+      <div class="about-caption">
+        <div class="about-name">Nisha</div>
+        <div class="about-role">Founder, AhamStree</div>
+      </div>
+    </aside>
   </div>
+</div>
+
 
   <div id="footer"></div>
 
@@ -64,3 +84,5 @@
   </script>
 </body>
 </html>
+
+
