--- a/sale.html
+++ b/sale.html
@@ -7,27 +7,278 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-CKQ1EXBHY6');
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sale — Ahamstree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
+  <style>
+    /* ── Sale Page Hero ── */
+    .sale-hero {
+      background: linear-gradient(135deg, var(--brand-dark) 0%, var(--brand) 50%, #9e3050 100%);
+      padding: 48px 16px 44px;
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+    .sale-hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.04'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    }
+    .sale-hero-inner { position: relative; z-index: 1; }
+    .sale-eyebrow {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      background: rgba(255,255,255,0.15);
+      border: 1px solid rgba(255,255,255,0.25);
+      border-radius: 40px;
+      padding: 5px 14px;
+      font-size: 11px;
+      font-weight: 600;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.9);
+      margin-bottom: 18px;
+    }
+    .sale-eyebrow-dot {
+      width: 6px; height: 6px;
+      border-radius: 50%;
+      background: #ffd700;
+      animation: pulse-dot 1.8s ease-in-out infinite;
+    }
+    @keyframes pulse-dot {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.6; transform: scale(0.7); }
+    }
+    .sale-hero h1 {
+      font-family: var(--font-heading);
+      font-size: clamp(48px, 8vw, 88px);
+      font-weight: 700;
+      color: #ffffff;
+      margin: 0 0 8px;
+      line-height: 1;
+      letter-spacing: -0.02em;
+    }
+    .sale-hero h1 span {
+      color: #ffd700;
+    }
+    .sale-hero-sub {
+      font-size: 15px;
+      color: rgba(255,255,255,0.75);
+      margin: 0;
+    }
+
+    /* ── Page Body ── */
+    .page-body {
+      max-width: 1060px;
+      margin: 0 auto;
+      padding: 36px 16px 64px;
+    }
+    .page-toolbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      margin-bottom: 28px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid var(--border-light);
+    }
+    .page-count {
+      font-size: 13px;
+      color: var(--text-light);
+    }
+
+    /* ── Product Card ── */
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+    }
+    .p-card {
+      border: 1px solid var(--border-light);
+      border-radius: var(--radius-md);
+      overflow: hidden;
+      background: var(--surface);
+      box-shadow: var(--shadow-xs);
+      transition: transform 0.28s cubic-bezier(0.34,1.56,0.64,1), box-shadow 0.28s ease, border-color 0.2s ease;
+      animation: fadeUp 0.4s ease both;
+    }
+    .p-card:hover {
+      transform: translateY(-5px);
+      box-shadow: var(--shadow-lg);
+      border-color: var(--border);
+    }
+    .p-card a { text-decoration: none; color: inherit; display: block; }
+    .p-card-img {
+      position: relative;
+      overflow: hidden;
+      background: var(--bg-warm);
+    }
+    .p-card-img img {
+      width: 100%;
+      height: 260px;
+      object-fit: cover;
+      display: block;
+      transition: transform 0.5s cubic-bezier(0.4,0,0.2,1);
+    }
+    .p-card:hover .p-card-img img { transform: scale(1.06); }
+    .p-card-img-empty {
+      height: 260px;
+      background: linear-gradient(135deg, var(--bg-warm) 0%, var(--border-light) 100%);
+    }
+    .p-card-badge {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: var(--brand);
+      color: #fff;
+      font-size: 10px;
+      font-weight: 700;
+      letter-spacing: 0.08em;
+      padding: 4px 9px;
+      border-radius: 20px;
+      z-index: 2;
+    }
+    .p-card-badge.sale-badge {
+      background: linear-gradient(135deg, var(--brand-dark), var(--brand));
+    }
+    .p-card-sold-overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(250,248,244,0.7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 3;
+    }
+    .p-card-sold-label {
+      background: var(--text);
+      color: #fff;
+      font-size: 11px;
+      font-weight: 600;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      padding: 6px 14px;
+      border-radius: 4px;
+    }
+    .p-card-body { padding: 14px 14px 16px; }
+    .p-card-title {
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 1.4;
+      color: var(--text);
+      margin: 0 0 8px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+    .p-card-pricing { display: flex; align-items: baseline; gap: 7px; flex-wrap: wrap; }
+    .p-card-original {
+      font-size: 12px;
+      text-decoration: line-through;
+      color: var(--text-light);
+    }
+    .p-card-sale-price {
+      font-size: 15px;
+      font-weight: 700;
+      color: var(--brand);
+    }
+    .p-card-price {
+      font-size: 15px;
+      font-weight: 700;
+      color: var(--text);
+    }
+    .p-card-stock {
+      font-size: 11px;
+      color: var(--text-light);
+      margin-top: 5px;
+    }
+    .p-card-stock.low { color: #c0540a; font-weight: 500; }
+
+    .load-more-wrap {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(16px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Skeleton */
+    .skeleton-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+    }
+    .skeleton {
+      border-radius: var(--radius-md);
+      background: linear-gradient(90deg, var(--bg-warm) 25%, var(--border-light) 50%, var(--bg-warm) 75%);
+      background-size: 200% 100%;
+      animation: shimmer 1.4s infinite;
+    }
+    @keyframes shimmer {
+      0% { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
+    }
+    .skeleton-card { height: 320px; }
+
+    @media (max-width: 900px) {
+      .product-grid, .skeleton-grid { grid-template-columns: repeat(3, 1fr); }
+    }
+    @media (max-width: 640px) {
+      .product-grid, .skeleton-grid { grid-template-columns: repeat(2, 1fr); gap: 12px; }
+      .p-card-img img { height: 200px; }
+      .p-card-img-empty { height: 200px; }
+    }
+  </style>
 </head>
 <body>
   <div id="header"></div>
 
-  <div class="container">
-    <h2 style="margin-top:0;">Sale</h2>
-    <div class="small">Discounted picks</div>
-    <hr />
-    <div id="status" class="small">Loading…</div>
-    <div id="grid" class="grid" style="margin-top:12px;"></div>
+  <!-- Sale Hero -->
+  <section class="sale-hero">
+    <div class="sale-hero-inner">
+      <div class="sale-eyebrow">
+        <span class="sale-eyebrow-dot"></span>
+        Limited Time
+      </div>
+      <h1>End of Season <span>Sale</span></h1>
+      <p class="sale-hero-sub">Handloom sarees & suits at exceptional prices — while stocks last</p>
+    </div>
+  </section>
+
+  <div class="page-body">
+    <div class="page-toolbar">
+      <div id="status" class="page-count"></div>
+    </div>
+
+    <!-- Skeleton -->
+    <div id="skeletonState" class="skeleton-grid">
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+    </div>
+
+    <div id="grid" class="product-grid"></div>
+
+    <div id="loadMoreRow" style="display:none;" class="load-more-wrap">
+      <button id="loadMore" class="btn secondary">Load more</button>
+    </div>
+    <div id="scrollSentinel" style="height:1px;"></div>
   </div>
 
   <div id="footer"></div>
@@ -35,10 +286,15 @@
   <script type="module">
     import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
+    import { escapeHtml, escapeAttr, safeSrc } from "./assets/safe.js";
 
     document.getElementById("header").innerHTML = renderHeader("");
     document.getElementById("footer").innerHTML = renderFooter();
     hydrateHeaderAuth();
+
+    function money(n) {
+      return "₹" + Number(n || 0).toLocaleString("en-IN", { maximumFractionDigits: 0 });
+    }
 
     function pctOff(price, sale) {
       if (!price || !sale) return "";
@@ -46,55 +302,123 @@
       return off > 0 ? `${off}% OFF` : "";
     }
 
-    async function loadSale() {
+    function productCard(p, idx) {
+      const base = Number(p.price_inr || 0);
+      const sale = Number(p.sale_price_inr || 0);
+      const badge = pctOff(base, sale);
+      const inv = Math.max(0, Number(p.inventory_qty||0) - Number(p.reserved_qty||0));
+      const soldOut = inv <= 0;
+
+      const imgHtml = p.image_url
+        ? `<img src="${safeSrc(p.image_url)}" alt="${escapeAttr(p.title)}" loading="lazy" decoding="async">`
+        : `<div class="p-card-img-empty"></div>`;
+
+      return `
+        <div class="p-card" style="animation-delay:${(idx % 8) * 60}ms">
+          <a href="product.html?id=${encodeURIComponent(p.id)}">
+            <div class="p-card-img">
+              ${imgHtml}
+              ${badge ? `<div class="p-card-badge sale-badge">${escapeHtml(badge)}</div>` : ""}
+              ${soldOut ? `<div class="p-card-sold-overlay"><span class="p-card-sold-label">Sold Out</span></div>` : ""}
+            </div>
+            <div class="p-card-body">
+              <div class="p-card-title">${escapeHtml(p.title)}</div>
+              <div class="p-card-pricing">
+                <span class="p-card-original">${money(base)}</span>
+                <span class="p-card-sale-price">${money(sale)}</span>
+              </div>
+              ${!soldOut && inv <= 3 ? `<div class="p-card-stock low">Only ${inv} left</div>` : ""}
+              ${soldOut ? `<div class="p-card-stock">Sold out</div>` : ""}
+            </div>
+          </a>
+        </div>`;
+    }
+
+    async function loadSale(first = false) {
       const status = document.getElementById("status");
       const grid = document.getElementById("grid");
+      const skeleton = document.getElementById("skeletonState");
+      const loadMoreRow = document.getElementById("loadMoreRow");
+      const loadMoreBtn = document.getElementById("loadMore");
+      const sentinel = document.getElementById("scrollSentinel");
+
+      const PAGE_SIZE = 24;
+      if (!window.__saleState){
+        window.__saleState = { offset: 0, hasMore: true, isLoading: false };
+      }
+      const st = window.__saleState;
+
+      function updateUI(){
+        if (st.hasMore){
+          loadMoreRow.style.display = "block";
+          loadMoreBtn.disabled = false;
+          loadMoreBtn.textContent = "Load more";
+        } else {
+          loadMoreRow.style.display = "none";
+        }
+      }
+
+      if (st.isLoading || !st.hasMore) return;
+      st.isLoading = true;
+
+      if (first){
+        grid.innerHTML = "";
+        st.offset = 0;
+        st.hasMore = true;
+      } else {
+        loadMoreBtn.textContent = "Loading…";
+        loadMoreBtn.disabled = true;
+      }
+
+      const from = st.offset;
+      const to = st.offset + PAGE_SIZE;
 
       const { data, error } = await supabase
         .from("products")
-        .select("id,title,price_inr,sale_price_inr,inventory_qty,is_active, product_images(image_url, sort_order)")
+        .select("id,title,price_inr,sale_price_inr,inventory_qty,reserved_qty,is_active,created_at, product_images(image_url, sort_order)")
         .eq("is_active", true)
         .not("sale_price_inr", "is", null)
-        .order("created_at", { ascending: false });
+        .order("created_at", { ascending: false })
+        .range(from, to);
+
+      skeleton.style.display = "none";
 
       if (error) {
         status.textContent = "Error: " + error.message;
+        st.isLoading = false;
         return;
       }
 
-      status.textContent = "";
+      const rows = data ?? [];
+      st.hasMore = rows.length > PAGE_SIZE;
+      const slice = st.hasMore ? rows.slice(0, PAGE_SIZE) : rows;
 
-      const normalized = (data ?? []).map(p => {
+      const normalized = slice.map(p => {
         const imgs = (p.product_images ?? []).slice().sort((a,b)=> (a.sort_order??0)-(b.sort_order??0));
         return { ...p, image_url: imgs[0]?.image_url ?? "" };
       });
 
-      grid.innerHTML = normalized.map(p => {
-        const badge = pctOff(p.price_inr, p.sale_price_inr);
-        return `
-          <div class="card">
-            <a href="product.html?id=${encodeURIComponent(p.id)}" style="text-decoration:none;color:inherit;">
-              ${p.image_url ? `<img src="${p.image_url}" alt="${p.title}" loading="lazy">` : `<div style="height:280px;background:#fafafa;"></div>`}
-              <div class="p">
-                <div style="font-weight:900;display:flex;justify-content:space-between;gap:10px;">
-                  <span>${p.title}</span>
-                  ${badge ? `<span class="small" style="font-weight:800;">${badge}</span>` : ``}
-                </div>
-                <div style="margin-top:6px;opacity:.9;">
-                  <span style="font-weight:900;">₹${p.sale_price_inr}</span>
-                  <span class="small" style="text-decoration:line-through;opacity:.7;margin-left:8px;">₹${p.price_inr}</span>
-                </div>
-                <div class="small" style="margin-top:6px;">
-                  ${p.inventory_qty > 0 ? `${p.inventory_qty} in stock` : "Sold out"}
-                </div>
-              </div>
-            </a>
-          </div>
-        `;
-      }).join("");
+      status.textContent = st.offset === 0 ? `${normalized.length}${st.hasMore ? "+" : ""} items on sale` : "";
+
+      grid.insertAdjacentHTML("beforeend", normalized.map((p, i) => productCard(p, st.offset + i)).join(""));
+
+      st.offset += slice.length;
+      updateUI();
+      st.isLoading = false;
+
+      if (!window.__saleBound){
+        window.__saleBound = true;
+        loadMoreBtn.addEventListener("click", () => loadSale(false));
+        if ("IntersectionObserver" in window) {
+          const obs = new IntersectionObserver((entries) => {
+            if (entries.some(e => e.isIntersecting)) loadSale(false);
+          }, { rootMargin: "600px" });
+          obs.observe(sentinel);
+        }
+      }
     }
 
-    loadSale();
+    loadSale(true);
   </script>
 </body>
 </html>
