--- a/admin.html
+++ b/admin.html
@@ -1,78 +1,355 @@
 <!doctype html>
 <html>
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-CKQ1EXBHY6');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-CKQ1EXBHY6');
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Admin — AhamStree</title>
+  <title>Admin Dashboard — AhamStree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
+
+  <style>
+    .admin-gate {
+      min-height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 12px;
+      text-align: center;
+    }
+
+    .metric-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 12px;
+      margin-bottom: 24px;
+    }
+
+    .metric-card {
+      background: #fff;
+      border: 1px solid var(--border, #e5e7eb);
+      border-radius: 16px;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    .metric-card.highlight {
+      background: var(--brand-light, #fdf2f2);
+      border-color: var(--brand, #7c1c1c);
+    }
+
+    .metric-card.warn {
+      background: #fffbeb;
+      border-color: #fde68a;
+    }
+
+    .metric-label {
+      font-size: 11px;
+      font-weight: 800;
+      letter-spacing: .06em;
+      text-transform: uppercase;
+      opacity: .6;
+    }
+
+    .metric-value {
+      font-size: 28px;
+      font-weight: 900;
+      line-height: 1;
+      font-family: 'Cormorant Garamond', serif;
+    }
+
+    .metric-sub {
+      font-size: 11px;
+      opacity: .6;
+    }
+
+    .section-title {
+      font-size: 13px;
+      font-weight: 800;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      opacity: .5;
+      margin: 20px 0 10px;
+    }
+
+    .quick-link {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 14px 16px;
+      border-radius: 14px;
+      border: 1px solid var(--border, #e5e7eb);
+      background: #fff;
+      text-decoration: none;
+      color: inherit;
+      font-weight: 700;
+      font-size: 14px;
+      transition: border-color .15s, background .15s;
+    }
+
+    .quick-link:hover {
+      border-color: var(--brand, #7c1c1c);
+      background: var(--brand-light, #fdf2f2);
+    }
+
+    .quick-links {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 10px;
+    }
+
+    .badge-dot {
+      display: inline-flex;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #ef4444;
+    }
+
+    #loadingState {
+      text-align: center;
+      padding: 48px;
+      opacity: .6;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
   <div id="header"></div>
-  <div class="container">
-    <h2 style="margin-top:0;">Admin Dashboard</h2>
 
-    <div id="cards" class="grid"></div>
-    <div style="margin-top:14px;">
-      <a class="btn secondary" href="admin-orders.html">View Orders</a>
+  <div class="container" style="max-width:980px;">
+
+    <!-- Gate: shown while checking auth -->
+    <div id="loadingState">Verifying admin access…</div>
+
+    <!-- Main dashboard (hidden until auth confirmed) -->
+    <div id="dashboard" style="display:none;">
+
+      <div style="display:flex; justify-content:space-between; align-items:flex-start; gap:12px; flex-wrap:wrap; margin-bottom:20px;">
+        <div>
+          <h2 style="margin:0;">Admin Dashboard</h2>
+          <div class="small" style="opacity:.6; margin-top:4px;">Overview of AhamStree store.</div>
+        </div>
+        <div style="display:flex; gap:8px; flex-wrap:wrap;">
+          <button id="btnRefresh" class="btn secondary" style="padding:8px 14px; font-size:13px;">↻ Refresh</button>
+        </div>
+      </div>
+
+      <!-- Action needed callout -->
+      <div id="actionNeeded" style="display:none; padding:14px 16px; border-radius:14px; background:#fffbeb; border:1.5px solid #fde68a; margin-bottom:20px;">
+        <div style="font-weight:800; font-size:14px; color:#92400e;">⚠️ Action needed</div>
+        <div class="small" style="color:#92400e; margin-top:4px;" id="actionNeededText"></div>
+        <a href="admin-orders.html?status=cod_pending" class="btn" style="margin-top:10px; padding:8px 14px; font-size:13px; display:inline-block;">View COD orders →</a>
+      </div>
+
+      <!-- Metric cards -->
+      <div class="section-title">Orders</div>
+      <div class="metric-grid" id="metricsOrders"></div>
+
+      <div class="section-title">Revenue</div>
+      <div class="metric-grid" id="metricsRevenue"></div>
+
+      <div class="section-title">Quick actions</div>
+      <div class="quick-links">
+        <a href="admin-orders.html" class="quick-link">
+          <span style="font-size:20px;">📋</span>
+          <div>
+            <div>All Orders</div>
+            <div class="small" style="font-weight:400; opacity:.6;">View and manage every order</div>
+          </div>
+        </a>
+        <a href="admin-orders.html?status=cod_pending" class="quick-link">
+          <span style="font-size:20px;">💵</span>
+          <div>
+            <div>COD Orders</div>
+            <div class="small" style="font-weight:400; opacity:.6;">Confirm cash on delivery orders</div>
+          </div>
+        </a>
+        <a href="admin-orders.html?status=paid" class="quick-link">
+          <span style="font-size:20px;">🚚</span>
+          <div>
+            <div>Ready to Ship</div>
+            <div class="small" style="font-weight:400; opacity:.6;">Paid orders needing dispatch</div>
+          </div>
+        </a>
+        <a href="admin-orders.html?status=shipped" class="quick-link">
+          <span style="font-size:20px;">📦</span>
+          <div>
+            <div>Shipped Orders</div>
+            <div class="small" style="font-weight:400; opacity:.6;">Track in-transit orders</div>
+          </div>
+        </a>
+        <a href="admin-create-order.html" class="quick-link" style="border-style:dashed;">
+          <span style="font-size:20px;">✏️</span>
+          <div>
+            <div>Create Order</div>
+            <div class="small" style="font-weight:400; opacity:.6;">Place an order for an offline customer</div>
+          </div>
+        </a>
+      </div>
+
+      <div id="statusMsg" class="small" style="margin-top:16px; opacity:.5;"></div>
     </div>
-
-    <div id="status" class="small" style="margin-top:10px;"></div>
   </div>
+
   <div id="footer"></div>
 
   <script type="module">
     import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
-    import { supabase } from "./assets/supabase.js";
+    import { supabase, SUPABASE_ANON_KEY } from "./assets/supabase.js";
 
     document.getElementById("header").innerHTML = renderHeader("admin");
     document.getElementById("footer").innerHTML = renderFooter();
     hydrateHeaderAuth();
 
-    const status = document.getElementById("status");
-    const cards = document.getElementById("cards");
+    var loadingState = document.getElementById("loadingState");
+    var dashboard    = document.getElementById("dashboard");
+    var statusMsg    = document.getElementById("statusMsg");
 
-    const { data: sess } = await supabase.auth.getSession();
-    if (!sess?.session) {
-      window.location.href = "login.html";
+    function showError(emoji, title, message) {
+      loadingState.style.display = "block";
+      dashboard.style.display = "none";
+      loadingState.innerHTML =
+        '<div class="admin-gate">' +
+          '<div style="font-size:48px;">' + emoji + '</div>' +
+          '<h3 style="margin:0;">' + title + '</h3>' +
+          '<div class="small" style="opacity:.7;">' + message + '</div>' +
+          '<a class="btn secondary" href="index.html" style="margin-top:8px;">Go to store</a>' +
+        '</div>';
     }
 
-    status.textContent = "Loading…";
-
-    const { data, error } = await supabase.functions.invoke("admin-dashboard");
-    if (error) {
-      status.textContent = "Access denied / error: " + error.message;
-      cards.innerHTML = "";
-    } else {
-      status.textContent = "";
-      const items = [
-        ["Orders", data.ordersCount],
-        ["Users", data.usersCount],
-        ["Paid", data.paidCount],
-        ["Pending", data.pendingCount],
-        ["Failed", data.failedCount],
-        ["Expired", data.expiredCount],
-        ["Revenue (paid)", "₹" + Number(data.revenuePaidInr||0).toLocaleString("en-IN")],
-      ];
-      cards.innerHTML = items.map(([k,v]) => `
-        <div class="card"><div class="p">
-          <div style="font-weight:900;">${k}</div>
-          <div style="font-size:22px;margin-top:6px;">${v}</div>
-        </div></div>
-      `).join("");
+    function money(v) {
+      return "₹" + Number(v || 0).toLocaleString("en-IN", { maximumFractionDigits: 0 });
     }
+
+    function metricCard(label, value, sub, cls) {
+      sub = sub || "";
+      cls = cls || "";
+      var subHtml = sub ? '<div class="metric-sub">' + sub + '</div>' : "";
+      return '<div class="metric-card ' + cls + '">' +
+        '<div class="metric-label">' + label + '</div>' +
+        '<div class="metric-value">' + value + '</div>' +
+        subHtml +
+        '</div>';
+    }
+
+    async function loadDashboard() {
+      statusMsg.textContent = "Loading metrics…";
+
+      var _sessD = await supabase.auth.getSession();
+      var _tokD = (_sessD.data && _sessD.data.session) ? _sessD.data.session.access_token : "";
+      var _respD = await fetch("https://mgmgkwoxirvzdnmayhwq.supabase.co/functions/v1/admin-dashboard", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": "Bearer " + _tokD,
+          "apikey": SUPABASE_ANON_KEY
+        },
+        body: JSON.stringify({})
+      });
+      var data = await _respD.json();
+      if (!_respD.ok) {
+        statusMsg.textContent = "Error loading metrics: " + (data.error || "HTTP " + _respD.status);
+        return;
+      }
+
+      // Action needed callout
+      var actionNeeded = document.getElementById("actionNeeded");
+      var needsAction = (data.codPendingCount || 0) + (data.confirmedCount || 0);
+      if (needsAction > 0) {
+        actionNeeded.style.display = "block";
+        document.getElementById("actionNeededText").textContent =
+          needsAction + " COD order" + (needsAction > 1 ? "s" : "") +
+          " need" + (needsAction === 1 ? "s" : "") + " to be confirmed and shipped.";
+      } else {
+        actionNeeded.style.display = "none";
+      }
+
+      // Order metrics
+      document.getElementById("metricsOrders").innerHTML = [
+        metricCard("Total Orders",     data.ordersCount || 0,     (data.recentOrders7d || 0) + " in last 7 days", ""),
+        metricCard("COD Pending",      data.codPendingCount || 0, "Awaiting confirmation", data.codPendingCount > 0 ? "warn" : ""),
+        metricCard("COD Confirmed",    data.confirmedCount || 0,  "Ready to ship",         data.confirmedCount > 0 ? "warn" : ""),
+        metricCard("Paid (Online)",    data.paidCount || 0,       "Ready to ship",         ""),
+        metricCard("Shipped",          data.shippedCount || 0,    "In transit",            ""),
+        metricCard("Delivered",        data.deliveredCount || 0,  "Completed",             ""),
+        metricCard("Payment Pending",  data.pendingCount || 0,    "Online payment awaited",""),
+        metricCard("Failed/Cancelled", (data.failedCount || 0) + (data.cancelledCount || 0), "", ""),
+        metricCard("Registered Users", data.usersCount || "—",   "Total accounts",        ""),
+      ].join("");
+
+      // Revenue metrics
+      document.getElementById("metricsRevenue").innerHTML = [
+        metricCard("Paid Revenue",  money(data.revenuePaidInr),      "From paid + shipped + delivered", "highlight"),
+        metricCard("COD Pipeline",  money(data.revenueConfirmedInr), "From confirmed COD orders",       ""),
+        metricCard("COD Orders",    data.codOrders || 0,             "Total placed",                    ""),
+        metricCard("Online Orders", data.onlineOrders || 0,          "Via Razorpay",                    ""),
+      ].join("");
+
+      statusMsg.textContent = "Last updated: " + new Date().toLocaleTimeString("en-IN");
+    }
+
+    async function initAdmin() {
+      try {
+        // ── 1. Auth check ────────────────────────────────────────────────
+        var sessResult = await supabase.auth.getSession();
+
+        if (sessResult.error) {
+          showError("⚠️", "Auth Error", sessResult.error.message);
+          return;
+        }
+
+        if (!sessResult.data || !sessResult.data.session) {
+          window.location.href = "login.html";
+          return;
+        }
+
+        var session = sessResult.data.session;
+
+        // ── 2. Admin check — verify email is in admin_users ──────────────
+        var adminResult = await supabase
+          .from("admin_users")
+          .select("email")
+          .eq("email", session.user.email.toLowerCase())
+          .maybeSingle();
+
+        if (adminResult.error) {
+          showError("⚠️", "Access Check Failed", "Could not verify admin status: " + adminResult.error.message);
+          return;
+        }
+
+        if (!adminResult.data) {
+          showError("🔒", "Access Denied", "Your account does not have admin access.");
+          return;
+        }
+
+        // ── 3. Show dashboard ────────────────────────────────────────────
+        loadingState.style.display = "none";
+        dashboard.style.display = "block";
+
+        document.getElementById("btnRefresh").onclick = loadDashboard;
+
+        loadDashboard();
+
+      } catch (e) {
+        console.error("Admin page error:", e);
+        showError("⚠️", "Something went wrong", e.message || "An unexpected error occurred. Check the browser console for details.");
+      }
+    }
+
+    initAdmin();
   </script>
 </body>
 </html>
