--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,8 @@
   <title>Blog — Ahamstree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/styles.css" />
-  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div id="header"></div>
@@ -36,6 +35,7 @@
   <script type="module">
     import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
+    import { escapeAttr, safeSrc } from "./assets/safe.js";
 
     document.getElementById("header").innerHTML = renderHeader("");
     document.getElementById("footer").innerHTML = renderFooter();
@@ -67,7 +67,7 @@
       meta.textContent = data.published_at ? new Date(data.published_at).toDateString() : "";
 
       cover.innerHTML = data.cover_image_url
-        ? `<img src="${data.cover_image_url}" alt="${data.title}" style="width:100%;border-radius:16px;max-height:420px;object-fit:cover;">`
+        ? `<img src="${safeSrc(data.cover_image_url)}" alt="${escapeAttr(data.title)}" style="width:100%;border-radius:16px;max-height:420px;object-fit:cover;">`
         : "";
 
       // Content can be plain text or HTML
