--- a/cart.html
+++ b/cart.html
@@ -2,32 +2,75 @@
 <html>
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CKQ1EXBHY6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-CKQ1EXBHY6');
+  </script>
 
-  gtag('config', 'G-CKQ1EXBHY6');
-</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cart — AhamStree</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
+
 <body>
   <div id="header"></div>
 
   <div class="container">
     <h2 style="margin-top:0;">Your cart</h2>
 
+    <!-- Premium Empty Cart -->
     <div id="empty" style="display:none;">
-      <div class="small">Cart is empty.</div>
-      <div style="margin-top:10px;"><a class="btn" href="products.html">Browse products</a></div>
+      <div class="card" style="padding:22px;border-radius:18px;display:flex;gap:18px;align-items:center;">
+        <div style="width:92px;height:92px;border-radius:18px;background:linear-gradient(135deg,#fff,#f6f0ff);display:flex;align-items:center;justify-content:center;flex:0 0 auto;">
+          <span style="font-size:36px;">🧺</span>
+        </div>
+
+        <div style="flex:1;min-width:0;">
+          <div style="font-family:'Playfair Display', serif;font-weight:700;font-size:22px;line-height:1.1;">
+            Your cart is waiting
+          </div>
+          <div class="small" style="margin-top:8px;opacity:.75;">
+            Add something beautiful — we’ll keep it safe here.
+          </div>
+
+          <div class="row" style="margin-top:14px;gap:10px;flex-wrap:wrap;">
+            <a class="btn" href="products.html">Shop Bestsellers</a>
+            <a class="btn secondary" href="products.html">New Arrivals</a>
+          </div>
+
+          <div class="small" style="margin-top:12px;opacity:.7;">
+            Secure checkout • Ships across India • Razorpay payments
+          </div>
+        </div>
+      </div>
+
+      <!-- Trust strip -->
+      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:14px;">
+        <div class="card" style="padding:12px 14px;border-radius:14px;">
+          <div style="font-weight:700;">✨ Premium quality</div>
+          <div class="small" style="opacity:.75;margin-top:4px;">Carefully curated sarees</div>
+        </div>
+        <div class="card" style="padding:12px 14px;border-radius:14px;">
+          <div style="font-weight:700;">🔒 Secure payments</div>
+          <div class="small" style="opacity:.75;margin-top:4px;">Razorpay protected</div>
+        </div>
+        <div class="card" style="padding:12px 14px;border-radius:14px;">
+          <div style="font-weight:700;">📦 Fast dispatch</div>
+          <div class="small" style="opacity:.75;margin-top:4px;">Quick processing</div>
+        </div>
+      </div>
+
+      <!-- Recommended products -->
+      <div id="emptyRecs" style="margin-top:18px;"></div>
     </div>
 
     <div id="list"></div>
@@ -39,9 +82,10 @@
       </div>
 
       <div class="small" style="margin-top:10px;">Shipping + Razorpay payment link comes in checkout.</div>
+      <div id="stockMsg" class="small" style="margin-top:8px;color:crimson;display:none;"></div>
 
       <div class="row" style="margin-top:14px;">
-        <a class="btn" href="checkout.html">Checkout</a>
+        <a id="checkoutBtn" class="btn" href="checkout.html">Checkout</a>
         <button id="clearBtn" class="btn secondary" type="button">Clear cart</button>
       </div>
     </div>
@@ -50,85 +94,284 @@
   <div id="footer"></div>
 
   <script type="module">
-  import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
-  import { getCart, updateQty, removeFromCart, clearCart } from "./assets/cart.js";
+    import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
+    import { supabase } from "./assets/supabase.js";
+    import { getCart, updateQty, removeFromCart, clearCart } from "./assets/cart.js";
+    import { escapeHtml, escapeAttr, safeSrc } from "./assets/safe.js";
 
-  function money(n) {
-    return "₹" + n;
-  }
-
-  function render() {
-    document.getElementById("header").innerHTML = renderHeader("cart");
-    document.getElementById("footer").innerHTML = renderFooter();
-    hydrateHeaderAuth();
-
-    const items = getCart();
-    const empty = document.getElementById("empty");
-    const list = document.getElementById("list");
-    const summary = document.getElementById("summary");
-
-    if (!items.length) {
-      empty.style.display = "block";
-      list.innerHTML = "";
-      summary.style.display = "none";
-      return;
+    function money(n) {
+      const num = Number(n || 0);
+      return "₹" + num.toLocaleString("en-IN", { maximumFractionDigits: 0 });
     }
 
-    empty.style.display = "none";
-    summary.style.display = "block";
+    // small cache to avoid re-fetching product rows on every qty click
+    const cache = { key: "", ts: 0, map: new Map() };
 
-    let subtotal = 0;
-    let html = "";
+    async function getProductMap(productIds) {
+      const ids = (productIds || []).map(String);
+      ids.sort();
+      const key = ids.join(",");
+      const now = Date.now();
 
-    items.forEach((i) => {
-      subtotal += i.price_inr * i.qty;
+      if (cache.key === key && (now - cache.ts) < 30000) return cache.map;
 
-      html +=
-        '<div class="card" style="padding:12px;border-radius:14px;display:flex;gap:12px;margin-bottom:12px;">' +
-          '<div style="width:72px;height:90px;border-radius:12px;overflow:hidden;background:#fafafa;">' +
-            (i.image_url
-              ? '<img src="' + i.image_url + '" alt="' + i.title + '" style="width:100%;height:100%;object-fit:cover;">'
-              : ''
-            ) +
-          '</div>' +
-          '<div style="flex:1;">' +
-            '<div style="font-weight:900;">' + i.title + '</div>' +
-            '<div style="margin-top:6px;opacity:.85;">' + money(i.price_inr) + '</div>' +
-            '<div class="row" style="margin-top:10px;">' +
-              '<span class="small">Qty</span>' +
-              '<input class="qty input" data-id="' + i.product_id + '" style="width:90px;" type="number" min="1" max="99" value="' + i.qty + '">' +
-              '<button class="remove btn secondary" data-id="' + i.product_id + '" type="button">Remove</button>' +
-            '</div>' +
-          '</div>' +
-          '<div style="font-weight:900;">' + money(i.price_inr * i.qty) + '</div>' +
-        '</div>';
-    });
+      const { data, error } = await supabase
+        .from("products")
+        .select("id,title,price_inr,sale_price_inr,inventory_qty,reserved_qty,is_active, product_images(image_url, sort_order)")
+        .in("id", ids);
 
-    list.innerHTML = html;
-    document.getElementById("subtotal").textContent = money(subtotal);
+      const map = new Map();
+      (data || []).forEach(p => map.set(String(p.id), p));
 
-    document.querySelectorAll(".qty").forEach((inp) => {
-      inp.addEventListener("change", (e) => {
-        updateQty(e.target.dataset.id, e.target.value);
-        render();
+      cache.key = key;
+      cache.ts = now;
+      cache.map = map;
+
+      if (error) console.error("Cart stock fetch error:", error);
+
+      return map;
+    }
+
+    // === NEW: Recommended products for empty cart ===
+    async function renderEmptyRecommendations() {
+      const mount = document.getElementById("emptyRecs");
+      if (!mount) return;
+
+      mount.innerHTML = `<div class="small">Loading popular products…</div>`;
+
+      const { data, error } = await supabase
+        .from("products")
+        .select("id,title,price_inr,sale_price_inr,inventory_qty,reserved_qty,is_active, created_at, view_count, product_images(image_url, sort_order)")
+        .eq("is_active", true)
+        .order("created_at", { ascending: false })
+        .limit(12);
+
+      if (error || !data?.length) {
+        mount.innerHTML = "";
+        return;
+      }
+
+      // Prefer items that are actually available: available = inventory - reserved
+      const normalized = (data || []).map(p => {
+        const inv = Number(p.inventory_qty || 0);
+        const res = Number(p.reserved_qty || 0);
+        const available = Math.max(0, inv - res);
+
+        const imgs = (p.product_images ?? []).slice().sort((a,b)=> (a.sort_order??0)-(b.sort_order??0));
+        const img = imgs[0]?.image_url || "";
+
+        const base = Number(p.price_inr || 0);
+        const sale = (p.sale_price_inr == null) ? null : Number(p.sale_price_inr);
+        const effective = (sale != null && sale > 0 && sale < base) ? sale : base;
+
+        return {
+          id: p.id,
+          title: p.title || "Product",
+          image_url: img,
+          available,
+          base,
+          sale,
+          effective
+        };
       });
-    });
 
-    document.querySelectorAll(".remove").forEach((btn) => {
-      btn.addEventListener("click", (e) => {
-        removeFromCart(e.target.dataset.id);
-        render();
+      // Show in-stock first, then take top 4
+      const picks = normalized
+        .sort((a,b) => (b.available > 0) - (a.available > 0))
+        .slice(0, 4);
+
+      const cards = picks.map(p => {
+        const img = safeSrc(p.image_url);
+        const title = escapeHtml(p.title);
+        const alt = escapeAttr(p.title);
+
+        const priceHtml = (() => {
+          if (p.sale != null && p.sale > 0 && p.sale < p.base) {
+            return `<span style="text-decoration:line-through;opacity:.6;margin-right:6px;">${money(p.base)}</span><span>${money(p.sale)}</span>`;
+          }
+          return `${money(p.base)}`;
+        })();
+
+        return `
+          <div class="card product-card" style="overflow:hidden;">
+            <a class="product-link" href="product.html?id=${encodeURIComponent(p.id)}" style="text-decoration:none;color:inherit;">
+              ${img ? `<img src="${img}" alt="${alt}" loading="lazy" style="height:260px;">` : `<div style="height:260px;background:#fafafa;"></div>`}
+              <div class="p">
+                <div class="product-title" style="font-weight:900;">${title}</div>
+                <div style="margin-top:6px;opacity:.85;">${priceHtml}</div>
+                <div class="small" style="margin-top:6px;">
+                  ${p.available > 0 ? `${p.available} in stock` : "Sold out"}
+                </div>
+              </div>
+            </a>
+          </div>
+        `;
+      }).join("");
+
+      mount.innerHTML = `
+        <div style="display:flex;justify-content:space-between;align-items:flex-end;margin-bottom:10px;">
+          <div style="font-weight:900;font-size:16px;">Popular right now</div>
+          <a class="small" style="opacity:.7;text-decoration:none;" href="products.html">View all</a>
+        </div>
+        <div class="grid" style="grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 14px;">
+          ${cards}
+        </div>
+      `;
+    }
+
+    async function render() {
+      document.getElementById("header").innerHTML = renderHeader("cart");
+      document.getElementById("footer").innerHTML = renderFooter();
+      hydrateHeaderAuth();
+
+      const items = getCart();
+      const empty = document.getElementById("empty");
+      const list = document.getElementById("list");
+      const summary = document.getElementById("summary");
+      const stockMsg = document.getElementById("stockMsg");
+      const checkoutBtn = document.getElementById("checkoutBtn");
+
+      if (!items.length) {
+        empty.style.display = "block";
+        list.innerHTML = "";
+        summary.style.display = "none";
+        await renderEmptyRecommendations();
+        return;
+      }
+
+      empty.style.display = "none";
+      summary.style.display = "block";
+
+      // Load latest product data (price + stock)
+      const ids = items.map(i => i.product_id);
+      const pMap = await getProductMap(ids);
+
+      let subtotal = 0;
+      let issues = [];
+      let html = "";
+
+      for (const i of items) {
+        const p = pMap.get(String(i.product_id));
+        const active = p?.is_active !== false;
+        const inv = Number(p?.inventory_qty ?? 0);
+        const reserved = Number(p?.reserved_qty ?? 0);
+        const availableQty = Math.max(0, inv - reserved);
+
+        const basePrice = Number(p?.price_inr ?? i.price_inr ?? 0);
+        const hasSale = p?.sale_price_inr != null && Number(p.sale_price_inr) > 0 && Number(p.sale_price_inr) < basePrice;
+        const unitPrice = hasSale ? Number(p.sale_price_inr) : basePrice;
+
+        const title = p?.title || i.title || "Item";
+
+        // choose image
+        const imgUrl = (() => {
+          const imgs = (p?.product_images ?? []).slice().sort((a,b)=> (a.sort_order??0)-(b.sort_order??0));
+          return imgs[0]?.image_url || i.image_url || "";
+        })();
+
+        // availability
+        const available = (!!p && active) ? availableQty : 0;
+        const max = Math.min(99, Math.max(0, available));
+        let qty = Number(i.qty || 1);
+
+        // If user has more qty than available stock, keep cart but block checkout.
+        if (max > 0 && qty > max) {
+          issues.push(`${title}: only ${max} left`);
+          updateQty(i.product_id, max);
+          qty = max;
+        }
+
+        const soldOut = (max === 0);
+        if (soldOut) issues.push(`${title}: sold out`);
+
+        const lineTotal = unitPrice * qty;
+        subtotal += lineTotal;
+
+        const safeTitleText = escapeHtml(title);
+        const safeAlt = escapeAttr(title);
+        const safeImg = safeSrc(imgUrl);
+        const safePid = escapeAttr(i.product_id);
+
+        html += `
+          <div class="card" style="padding:12px;border-radius:14px;display:flex;gap:12px;margin-bottom:12px;">
+            <div style="width:72px;height:90px;border-radius:12px;overflow:hidden;background:#fafafa;">
+              ${safeImg ? `<img src="${safeImg}" alt="${safeAlt}" style="width:100%;height:100%;object-fit:cover;">` : ``}
+            </div>
+            <div style="flex:1;min-width:0;">
+              <div style="font-weight:900;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">${safeTitleText}</div>
+              <div style="margin-top:6px;opacity:.85;">
+                ${hasSale
+                  ? `<span style="text-decoration:line-through;opacity:.55;margin-right:6px;font-size:13px;">${money(basePrice)}</span><span style="color:var(--brand);font-weight:800;">${money(unitPrice)}</span>`
+                  : money(unitPrice)
+                }
+              </div>
+              ${soldOut ? `<div class="small" style="margin-top:6px;color:crimson;">Sold out</div>` : ``}
+              ${(!soldOut && max > 0) ? `<div class="small" style="margin-top:6px;opacity:.75;">Available: ${max}</div>` : ``}
+              <div class="row" style="margin-top:10px;">
+                <span class="small">Qty</span>
+                <input class="qty input" data-max="${max}" data-id="${safePid}" style="width:90px;" type="number" min="1" max="${max || 1}" value="${qty}" ${soldOut ? "disabled" : ""}>
+                <button class="remove btn secondary" data-id="${safePid}" type="button">Remove</button>
+              </div>
+            </div>
+            <div style="font-weight:900;flex:0 0 auto;">${money(lineTotal)}</div>
+          </div>
+        `;
+      }
+
+      list.innerHTML = html;
+      document.getElementById("subtotal").textContent = money(subtotal);
+
+      // Show stock issues & disable checkout if needed
+      if (stockMsg) {
+        if (issues.length) {
+          stockMsg.style.display = "block";
+          stockMsg.textContent = "Please fix: " + issues.join(" • ");
+        } else {
+          stockMsg.style.display = "none";
+          stockMsg.textContent = "";
+        }
+      }
+
+      if (checkoutBtn) {
+        if (issues.length) {
+          checkoutBtn.classList.add("is-disabled");
+          checkoutBtn.setAttribute("aria-disabled", "true");
+          checkoutBtn.title = "Fix sold out / stock issues first";
+        } else {
+          checkoutBtn.classList.remove("is-disabled");
+          checkoutBtn.removeAttribute("aria-disabled");
+          checkoutBtn.title = "";
+        }
+      }
+
+      document.querySelectorAll(".qty").forEach((inp) => {
+        inp.addEventListener("change", async (e) => {
+          const id = e.target.dataset.id;
+          const max = Number(e.target.dataset.max || 99);
+          let v = Number(e.target.value || 1);
+          if (!Number.isFinite(v) || v < 1) v = 1;
+          if (max > 0 && v > max) v = max;
+          e.target.value = v;
+
+          updateQty(id, v);
+          await render();
+        });
       });
-    });
 
-    document.getElementById("clearBtn").onclick = () => {
-      clearCart();
-      render();
-    };
-  }
+      document.querySelectorAll(".remove").forEach((btn) => {
+        btn.addEventListener("click", async (e) => {
+          removeFromCart(e.target.dataset.id);
+          await render();
+        });
+      });
 
-  render();
-</script>
+      document.getElementById("clearBtn").onclick = async () => {
+        clearCart();
+        await render();
+      };
+    }
 
+    render();
+  </script>
 </body>
 </html>
