--- a/collection.html
+++ b/collection.html
@@ -7,27 +7,283 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-CKQ1EXBHY6');
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Collection — Ahamstree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
+  <style>
+    /* ── Collection Hero ── */
+    /* Version A: has cover image → full-bleed cinematic banner */
+    .col-hero-img {
+      position: relative;
+      height: clamp(260px, 40vw, 440px);
+      overflow: hidden;
+      background: var(--bg-warm);
+    }
+    .col-hero-img img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+    .col-hero-img-overlay {
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(to top, rgba(16,10,6,0.75) 0%, rgba(16,10,6,0.2) 55%, transparent 100%);
+    }
+    .col-hero-img-body {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 40px clamp(16px,4vw,60px) 36px;
+    }
+    .col-hero-breadcrumb {
+      font-size: 11px;
+      font-weight: 500;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.6);
+      margin-bottom: 10px;
+    }
+    .col-hero-breadcrumb a {
+      color: rgba(255,255,255,0.6);
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+    .col-hero-breadcrumb a:hover { color: #fff; }
+    .col-hero-breadcrumb span { margin: 0 6px; }
+    .col-hero-img-body h1 {
+      font-family: var(--font-heading);
+      font-size: clamp(30px, 5vw, 56px);
+      font-weight: 600;
+      color: #fff;
+      margin: 0 0 8px;
+      line-height: 1.05;
+    }
+    .col-hero-img-body .desc {
+      font-size: 14px;
+      color: rgba(255,255,255,0.8);
+      max-width: 520px;
+    }
+
+    /* Version B: no image → warm text hero */
+    .col-hero-text {
+      background: linear-gradient(160deg, var(--bg-warm) 0%, #ede5d8 100%);
+      border-bottom: 1px solid var(--border-light);
+      padding: 48px 16px 40px;
+      position: relative;
+      overflow: hidden;
+    }
+    .col-hero-text::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(ellipse 70% 80% at 50% 110%, rgba(110,34,54,0.07) 0%, transparent 65%);
+      pointer-events: none;
+    }
+    .col-hero-text-inner {
+      max-width: 1060px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 1;
+    }
+    .col-hero-text .breadcrumb {
+      font-size: 11px;
+      font-weight: 500;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      color: var(--text-light);
+      margin-bottom: 12px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+    .col-hero-text .breadcrumb a { color: var(--text-light); text-decoration: none; }
+    .col-hero-text .breadcrumb a:hover { color: var(--brand); }
+    .col-hero-text h1 {
+      font-family: var(--font-heading);
+      font-size: clamp(32px, 5vw, 56px);
+      font-weight: 600;
+      color: var(--text);
+      margin: 0 0 8px;
+      line-height: 1.08;
+    }
+    .col-hero-text .desc {
+      font-size: 14px;
+      color: var(--text-light);
+      max-width: 480px;
+    }
+
+    /* ── Collection body ── */
+    .collection-body {
+      max-width: 1060px;
+      margin: 0 auto;
+      padding: 36px 16px 64px;
+    }
+    .col-meta-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 28px;
+      padding-bottom: 18px;
+      border-bottom: 1px solid var(--border-light);
+      gap: 12px;
+    }
+    .col-meta-count { font-size: 13px; color: var(--text-light); }
+
+    /* ── Product Grid ── */
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+    }
+    .p-card {
+      border: 1px solid var(--border-light);
+      border-radius: var(--radius-md);
+      overflow: hidden;
+      background: var(--surface);
+      box-shadow: var(--shadow-xs);
+      transition: transform 0.28s cubic-bezier(0.34,1.56,0.64,1), box-shadow 0.28s ease, border-color 0.2s ease;
+      animation: fadeUp 0.4s ease both;
+    }
+    .p-card:hover {
+      transform: translateY(-5px);
+      box-shadow: var(--shadow-lg);
+      border-color: var(--border);
+    }
+    .p-card a { text-decoration: none; color: inherit; display: block; }
+    .p-card-img {
+      position: relative;
+      overflow: hidden;
+      background: var(--bg-warm);
+    }
+    .p-card-img img {
+      width: 100%;
+      height: 280px;
+      object-fit: cover;
+      display: block;
+      transition: transform 0.5s cubic-bezier(0.4,0,0.2,1);
+    }
+    .p-card:hover .p-card-img img { transform: scale(1.06); }
+    .p-card-img-empty {
+      height: 280px;
+      background: linear-gradient(135deg, var(--bg-warm) 0%, var(--border-light) 100%);
+    }
+    .p-card-badge {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: var(--brand);
+      color: #fff;
+      font-size: 9px;
+      font-weight: 700;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      padding: 4px 9px;
+      border-radius: 20px;
+      z-index: 2;
+    }
+    .p-card-sold-overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(250,248,244,0.72);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 3;
+    }
+    .p-card-sold-label {
+      background: var(--text);
+      color: #fff;
+      font-size: 11px;
+      font-weight: 600;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      padding: 6px 14px;
+      border-radius: 4px;
+    }
+    .p-card-body { padding: 14px 14px 16px; }
+    .p-card-title {
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 1.4;
+      color: var(--text);
+      margin: 0 0 8px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+    .p-card-pricing { display: flex; align-items: baseline; gap: 7px; flex-wrap: wrap; }
+    .p-card-price { font-size: 15px; font-weight: 700; color: var(--text); }
+    .p-card-original { font-size: 12px; text-decoration: line-through; color: var(--text-light); }
+    .p-card-sale-price { font-size: 15px; font-weight: 700; color: var(--brand); }
+    .p-card-stock { font-size: 11px; color: var(--text-light); margin-top: 5px; }
+    .p-card-stock.low { color: #c0540a; font-weight: 500; }
+
+    /* Empty/loading */
+    .page-empty {
+      text-align: center;
+      padding: 80px 20px;
+      color: var(--text-light);
+    }
+    .skeleton-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; }
+    .skeleton {
+      border-radius: var(--radius-md);
+      background: linear-gradient(90deg, var(--bg-warm) 25%, var(--border-light) 50%, var(--bg-warm) 75%);
+      background-size: 200% 100%;
+      animation: shimmer 1.4s infinite;
+    }
+    @keyframes shimmer { 0% { background-position: 200% 0; } 100% { background-position: -200% 0; } }
+    .skeleton-card { height: 360px; }
+    .skeleton-hero { height: 400px; }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(16px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 900px) {
+      .product-grid, .skeleton-grid { grid-template-columns: repeat(3, 1fr); }
+    }
+    @media (max-width: 640px) {
+      .product-grid, .skeleton-grid { grid-template-columns: repeat(2, 1fr); gap: 12px; }
+      .p-card-img img, .p-card-img-empty { height: 210px; }
+    }
+  </style>
 </head>
 <body>
   <div id="header"></div>
 
-  <div class="container">
-    <h2 id="title" style="margin-top:0;">Collection</h2>
-    <div id="desc" class="small"></div>
-    <hr />
-    <div id="status" class="small">Loading…</div>
-    <div id="grid" class="grid" style="margin-top:12px;"></div>
+  <!-- Hero renders here by JS -->
+  <div id="heroSlot">
+    <div class="skeleton skeleton-hero"></div>
+  </div>
+
+  <div class="collection-body">
+    <div class="col-meta-row">
+      <div id="colCount" class="col-meta-count"></div>
+    </div>
+
+    <div id="skeletonGrid" class="skeleton-grid">
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+      <div class="skeleton skeleton-card"></div>
+    </div>
+
+    <div id="grid" class="product-grid"></div>
+    <div id="status" class="small"></div>
   </div>
 
   <div id="footer"></div>
@@ -35,6 +291,7 @@
   <script type="module">
     import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
+    import { escapeHtml, escapeAttr, safeSrc } from "./assets/safe.js";
 
     document.getElementById("header").innerHTML = renderHeader("");
     document.getElementById("footer").innerHTML = renderFooter();
@@ -43,34 +300,109 @@
     const params = new URLSearchParams(location.search);
     const slug = params.get("slug");
 
-    async function loadCollection() {
-      const status = document.getElementById("status");
-      const grid = document.getElementById("grid");
-      const title = document.getElementById("title");
-      const desc = document.getElementById("desc");
+    function money(v) {
+      return "₹" + Number(v || 0).toLocaleString("en-IN", { maximumFractionDigits: 0 });
+    }
 
-      if (!slug) { status.textContent = "Missing collection slug."; return; }
+    function productCard(p, idx) {
+      const inv = Math.max(0, Number(p.inventory_qty||0) - Number(p.reserved_qty||0));
+      const soldOut = inv <= 0;
+      const base = Number(p.price_inr || 0);
+      const sale = p.sale_price_inr != null ? Number(p.sale_price_inr) : null;
+      const hasSale = sale != null && sale > 0 && sale < base;
+      const pctOff = hasSale ? Math.round((1 - sale/base) * 100) : 0;
+
+      const imgHtml = p.image_url
+        ? `<img src="${safeSrc(p.image_url)}" alt="${escapeAttr(p.title)}" loading="${idx < 4 ? 'eager' : 'lazy'}">`
+        : `<div class="p-card-img-empty"></div>`;
+
+      const priceHtml = hasSale
+        ? `<span class="p-card-original">${money(base)}</span><span class="p-card-sale-price">${money(sale)}</span>`
+        : `<span class="p-card-price">${money(base)}</span>`;
+
+      return `
+        <div class="p-card" style="animation-delay:${(idx % 8) * 55}ms">
+          <a href="product.html?id=${encodeURIComponent(p.id)}">
+            <div class="p-card-img">
+              ${imgHtml}
+              ${pctOff > 0 ? `<div class="p-card-badge">${pctOff}% OFF</div>` : ""}
+              ${soldOut ? `<div class="p-card-sold-overlay"><span class="p-card-sold-label">Sold Out</span></div>` : ""}
+            </div>
+            <div class="p-card-body">
+              <div class="p-card-title">${escapeHtml(p.title)}</div>
+              <div class="p-card-pricing">${priceHtml}</div>
+              ${!soldOut && inv <= 3 ? `<div class="p-card-stock low">Only ${inv} left</div>` : ""}
+              ${soldOut ? `<div class="p-card-stock">Sold out</div>` : ""}
+            </div>
+          </a>
+        </div>`;
+    }
+
+    async function loadCollection() {
+      const heroSlot = document.getElementById("heroSlot");
+      const grid = document.getElementById("grid");
+      const skeletonGrid = document.getElementById("skeletonGrid");
+      const status = document.getElementById("status");
+      const colCount = document.getElementById("colCount");
+
+      if (!slug) {
+        heroSlot.innerHTML = "";
+        status.textContent = "Missing collection slug.";
+        skeletonGrid.style.display = "none";
+        return;
+      }
 
       const { data: col, error: colErr } = await supabase
         .from("collections")
-        .select("id,name,description")
+        .select("id,name,description,cover_image_url")
         .eq("slug", slug)
         .maybeSingle();
 
-      if (colErr || !col) { status.textContent = "Collection not found."; return; }
+      // Render hero
+      if (col) {
+        document.title = `${col.name} — Ahamstree`;
+        const breadcrumb = `<a href="collections.html">Collections</a><span>›</span>${escapeHtml(col.name)}`;
 
-      title.textContent = col.name;
-      desc.textContent = col.description ?? "";
+        if (col.cover_image_url) {
+          heroSlot.innerHTML = `
+            <div class="col-hero-img">
+              <img src="${safeSrc(col.cover_image_url)}" alt="${escapeAttr(col.name)}" loading="eager">
+              <div class="col-hero-img-overlay"></div>
+              <div class="col-hero-img-body">
+                <div class="col-hero-breadcrumb">${breadcrumb}</div>
+                <h1>${escapeHtml(col.name)}</h1>
+                ${col.description ? `<p class="desc">${escapeHtml(col.description)}</p>` : ""}
+              </div>
+            </div>`;
+        } else {
+          heroSlot.innerHTML = `
+            <section class="col-hero-text">
+              <div class="col-hero-text-inner">
+                <div class="breadcrumb">${breadcrumb}</div>
+                <h1>${escapeHtml(col.name)}</h1>
+                ${col.description ? `<p class="desc">${escapeHtml(col.description)}</p>` : ""}
+              </div>
+            </section>`;
+        }
+      } else {
+        heroSlot.innerHTML = "";
+      }
+
+      if (colErr || !col) {
+        status.textContent = "Collection not found.";
+        skeletonGrid.style.display = "none";
+        return;
+      }
 
       const { data, error } = await supabase
         .from("collection_products")
-        .select("sort_order, product:products(id,title,price_inr,inventory_qty,is_active, product_images(image_url, sort_order))")
+        .select("sort_order, product:products(id,title,price_inr,sale_price_inr,inventory_qty,reserved_qty,is_active, product_images(image_url, sort_order))")
         .eq("collection_id", col.id)
         .order("sort_order", { ascending: true });
 
-      if (error) { status.textContent = "Error: " + error.message; return; }
+      skeletonGrid.style.display = "none";
 
-      status.textContent = "";
+      if (error) { status.textContent = "Error: " + error.message; return; }
 
       const products = (data ?? [])
         .map(r => r.product)
@@ -81,20 +413,17 @@
         return { ...p, image_url: imgs[0]?.image_url ?? "" };
       });
 
-      grid.innerHTML = normalized.map(p => `
-        <div class="card">
-          <a href="product.html?id=${encodeURIComponent(p.id)}" style="text-decoration:none;color:inherit;">
-            ${p.image_url ? `<img src="${p.image_url}" alt="${p.title}" loading="lazy">` : `<div style="height:280px;background:#fafafa;"></div>`}
-            <div class="p">
-              <div style="font-weight:900;">${p.title}</div>
-              <div style="margin-top:6px;opacity:.85;">₹${p.price_inr}</div>
-              <div class="small" style="margin-top:6px;">
-                ${p.inventory_qty > 0 ? `${p.inventory_qty} in stock` : "Sold out"}
-              </div>
-            </div>
-          </a>
-        </div>
-      `).join("");
+      colCount.textContent = `${normalized.length} item${normalized.length !== 1 ? "s" : ""}`;
+
+      if (normalized.length === 0) {
+        grid.innerHTML = `<div class="page-empty" style="grid-column:1/-1;">
+          <p style="font-family:var(--font-heading);font-size:22px;margin:0 0 6px;">No products yet</p>
+          <span style="font-size:13px;">Check back soon.</span>
+        </div>`;
+        return;
+      }
+
+      grid.innerHTML = normalized.map((p, i) => productCard(p, i)).join("");
     }
 
     loadCollection();
