--- a/collections.html
+++ b/collections.html
@@ -7,27 +7,268 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-CKQ1EXBHY6');
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Collections — Ahamstree</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
+  <style>
+    /* ── Collections Hero ── */
+    .page-hero {
+      background: var(--bg-warm);
+      border-bottom: 1px solid var(--border-light);
+      padding: 48px 16px 40px;
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+    .page-hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(ellipse 80% 100% at 50% 120%, rgba(110,34,54,0.07) 0%, transparent 65%);
+      pointer-events: none;
+    }
+    .page-hero-inner { position: relative; z-index: 1; }
+    .page-kicker {
+      font-size: 11px;
+      font-weight: 600;
+      letter-spacing: 0.2em;
+      text-transform: uppercase;
+      color: var(--brand);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+      margin-bottom: 14px;
+    }
+    .page-kicker::before, .page-kicker::after {
+      content: "";
+      width: 32px;
+      height: 1px;
+      background: var(--brand);
+      opacity: 0.4;
+    }
+    .page-hero h1 {
+      font-family: var(--font-heading);
+      font-size: clamp(36px, 5.5vw, 62px);
+      font-weight: 600;
+      color: var(--text);
+      margin: 0 0 10px;
+      line-height: 1.08;
+    }
+    .page-hero h1 em { font-style: italic; color: var(--brand); }
+    .page-hero-sub {
+      font-size: 14px;
+      color: var(--text-light);
+      margin: 0;
+      max-width: 400px;
+      margin-inline: auto;
+    }
+
+    /* ── Collections Grid ── */
+    .collections-body {
+      max-width: 1060px;
+      margin: 0 auto;
+      padding: 48px 16px 64px;
+    }
+
+    .collections-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 24px;
+    }
+
+    /* First collection gets the hero treatment */
+    .col-card:first-child {
+      grid-column: 1 / -1;
+    }
+
+    .col-card {
+      display: block;
+      text-decoration: none;
+      color: inherit;
+      border-radius: var(--radius-lg);
+      overflow: hidden;
+      position: relative;
+      background: var(--bg-warm);
+      box-shadow: var(--shadow-sm);
+      transition: transform 0.3s cubic-bezier(0.34,1.56,0.64,1), box-shadow 0.3s ease;
+      animation: fadeUp 0.45s ease both;
+    }
+    .col-card:hover {
+      transform: translateY(-6px);
+      box-shadow: var(--shadow-lg);
+    }
+
+    /* Featured (first) card */
+    .col-card:first-child .col-card-img {
+      height: 400px;
+    }
+    .col-card-img {
+      height: 280px;
+      overflow: hidden;
+      position: relative;
+    }
+    .col-card-img img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      transition: transform 0.6s cubic-bezier(0.4,0,0.2,1);
+    }
+    .col-card:hover .col-card-img img { transform: scale(1.06); }
+    .col-card-img-placeholder {
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, #f0e8df 0%, #e8d9cc 40%, #dfd0c0 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    /* Gradient overlay for text readability */
+    .col-card-overlay {
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(to top, rgba(20,14,10,0.72) 0%, rgba(20,14,10,0.18) 50%, transparent 100%);
+    }
+
+    /* Text sits on the overlay */
+    .col-card-body {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 28px 24px 24px;
+      color: #fff;
+    }
+    .col-card:first-child .col-card-body {
+      padding: 36px 36px 32px;
+    }
+    .col-card-name {
+      font-family: var(--font-heading);
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 1.1;
+      margin: 0 0 6px;
+      color: #fff;
+    }
+    .col-card:first-child .col-card-name {
+      font-size: clamp(28px, 4vw, 42px);
+    }
+    .col-card-desc {
+      font-size: 13px;
+      line-height: 1.5;
+      color: rgba(255,255,255,0.8);
+      margin: 0 0 14px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+    .col-card-cta {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 12px;
+      font-weight: 600;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: rgba(255,255,255,0.9);
+      border-bottom: 1px solid rgba(255,255,255,0.4);
+      padding-bottom: 2px;
+      transition: gap 0.2s ease, border-color 0.2s ease;
+    }
+    .col-card:hover .col-card-cta {
+      gap: 10px;
+      border-color: rgba(255,255,255,0.9);
+    }
+
+    /* No-image fallback: text below */
+    .col-card.no-image .col-card-overlay { display: none; }
+    .col-card.no-image .col-card-body {
+      position: static;
+      padding: 20px;
+      color: var(--text);
+    }
+    .col-card.no-image .col-card-name { color: var(--text); }
+    .col-card.no-image .col-card-desc { color: var(--text-light); }
+    .col-card.no-image .col-card-cta { color: var(--brand); border-color: var(--brand); opacity: 0.7; }
+
+    /* Empty / loading */
+    .collections-empty {
+      text-align: center;
+      padding: 80px 20px;
+      color: var(--text-light);
+    }
+    .skeleton-grid-col {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 24px;
+    }
+    .skeleton {
+      border-radius: var(--radius-lg);
+      background: linear-gradient(90deg, var(--bg-warm) 25%, var(--border-light) 50%, var(--bg-warm) 75%);
+      background-size: 200% 100%;
+      animation: shimmer 1.4s infinite;
+    }
+    @keyframes shimmer {
+      0% { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
+    }
+    .skeleton-hero-col { height: 400px; grid-column: 1 / -1; }
+    .skeleton-col { height: 280px; }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(16px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 820px) {
+      .collections-grid { grid-template-columns: repeat(2, 1fr); gap: 16px; }
+      .col-card:first-child { grid-column: 1 / -1; }
+      .col-card:first-child .col-card-img { height: 300px; }
+      .skeleton-grid-col { grid-template-columns: repeat(2, 1fr); }
+    }
+    @media (max-width: 520px) {
+      .collections-grid { grid-template-columns: 1fr; }
+      .col-card:first-child { grid-column: auto; }
+      .skeleton-grid-col { grid-template-columns: 1fr; }
+    }
+  </style>
 </head>
 <body>
   <div id="header"></div>
 
-  <div class="container">
-    <h2 style="margin-top:0;">Collections</h2>
-    <div class="small">Curated edits</div>
-    <hr />
-    <div id="status" class="small">Loading…</div>
-    <div id="grid" class="grid" style="margin-top:12px;"></div>
+  <section class="page-hero">
+    <div class="page-hero-inner">
+      <div class="page-kicker">AhamStree</div>
+      <h1>Curated <em>Collections</em></h1>
+      <p class="page-hero-sub">Handpicked edits — each one tells a story of craft, colour & culture.</p>
+    </div>
+  </section>
+
+  <div class="collections-body">
+    <div id="skeletonState" class="skeleton-grid-col">
+      <div class="skeleton skeleton-hero-col"></div>
+      <div class="skeleton skeleton-col"></div>
+      <div class="skeleton skeleton-col"></div>
+      <div class="skeleton skeleton-col"></div>
+    </div>
+
+    <div id="grid" class="collections-grid"></div>
+    <div id="emptyState" style="display:none;" class="collections-empty">
+      <p style="font-family:var(--font-heading);font-size:22px;margin:0 0 6px;">No collections yet</p>
+      <span style="font-size:13px;">Check back soon.</span>
+    </div>
+    <div id="errorState" style="display:none;" class="collections-empty">
+      <p style="font-family:var(--font-heading);font-size:22px;margin:0 0 6px;">Couldn't load collections</p>
+      <span style="font-size:13px;">Please refresh to try again.</span>
+    </div>
   </div>
 
   <div id="footer"></div>
@@ -35,35 +276,59 @@
   <script type="module">
     import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
+    import { escapeHtml, escapeAttr, safeSrc } from "./assets/safe.js";
 
     document.getElementById("header").innerHTML = renderHeader("");
     document.getElementById("footer").innerHTML = renderFooter();
     hydrateHeaderAuth();
 
+    const arrowSvg = `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg>`;
+
+    const placeholderSvg = `<svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="0.8" opacity="0.3"><rect x="3" y="3" width="18" height="18" rx="3"/><path d="M3 9l5-5 4 4 4-6 5 7"/><circle cx="8" cy="8" r="1.5" fill="currentColor"/></svg>`;
+
     async function loadCollections() {
-      const status = document.getElementById("status");
+      const skeleton = document.getElementById("skeletonState");
       const grid = document.getElementById("grid");
+      const emptyState = document.getElementById("emptyState");
+      const errorState = document.getElementById("errorState");
 
-      const { data, error } = await supabase
-        .from("collections")
-        .select("name,slug,description,cover_image_url,is_active,created_at")
-        .eq("is_active", true)
-        .order("created_at", { ascending: false });
+      try {
+        const { data, error } = await supabase
+          .from("collections")
+          .select("name,slug,description,cover_image_url,is_active,created_at")
+          .eq("is_active", true)
+          .order("created_at", { ascending: false });
 
-      if (error) { status.textContent = "Error: " + error.message; return; }
-      status.textContent = "";
+        skeleton.style.display = "none";
 
-      grid.innerHTML = (data ?? []).map(c => `
-        <div class="card">
-          <a href="collection.html?slug=${encodeURIComponent(c.slug)}" style="text-decoration:none;color:inherit;">
-            ${c.cover_image_url ? `<img src="${c.cover_image_url}" alt="${c.name}" loading="lazy">` : `<div style="height:220px;background:#fafafa;"></div>`}
-            <div class="p">
-              <div style="font-weight:900;">${c.name}</div>
-              <div class="small" style="margin-top:6px;opacity:.85;">${c.description ?? ""}</div>
-            </div>
-          </a>
-        </div>
-      `).join("");
+        if (error) throw error;
+
+        const rows = data ?? [];
+        if (rows.length === 0) { emptyState.style.display = "block"; return; }
+
+        grid.innerHTML = rows.map((c, i) => {
+          const hasImg = !!c.cover_image_url;
+          const imgHtml = hasImg
+            ? `<img src="${safeSrc(c.cover_image_url)}" alt="${escapeAttr(c.name)}" loading="${i === 0 ? 'eager' : 'lazy'}">`
+            : `<div class="col-card-img-placeholder">${placeholderSvg}</div>`;
+
+          return `
+            <a class="col-card${hasImg ? "" : " no-image"}" href="collection.html?slug=${encodeURIComponent(c.slug)}" style="animation-delay:${i * 80}ms">
+              <div class="col-card-img">${imgHtml}</div>
+              <div class="col-card-overlay"></div>
+              <div class="col-card-body">
+                <div class="col-card-name">${escapeHtml(c.name)}</div>
+                ${c.description ? `<div class="col-card-desc">${escapeHtml(c.description)}</div>` : ""}
+                <span class="col-card-cta">Explore ${arrowSvg}</span>
+              </div>
+            </a>`;
+        }).join("");
+
+      } catch(e) {
+        skeleton.style.display = "none";
+        errorState.style.display = "block";
+        console.error(e);
+      }
     }
 
     loadCollections();
