--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <title>AhamStree — Handloom Sarees</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;1,9..40,300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/styles.css" />
-  <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="/favicon.ico">
   <link rel="preload" as="image" href="assets/images/banners/hero-1-launch.jpg" imagesrcset="assets/images/banners/hero-1-launch-m.jpg 768w, assets/images/banners/hero-1-launch.jpg 1920w" imagesizes="100vw" />
 </head>
@@ -102,26 +101,23 @@
     <section class="section">
       <div class="section-head">
         <h2 class="section-title">Shop by Category</h2>
-        <a class="section-link" href="products.html">View all</a>
+        <a class="section-link" href="products.html?type=saree">View all</a>
       </div>
 
-      <div class="category-tiles">
-        <a class="cat-tile" href="products.html#silk">
-          <div class="cat-title">Silk</div>
-          <div class="cat-sub">Wedding & festive</div>
-        </a>
-        <a class="cat-tile" href="products.html#cotton">
-          <div class="cat-title">Cotton</div>
-          <div class="cat-sub">Everyday comfort</div>
-        </a>
-        <a class="cat-tile" href="products.html#banarasi">
-          <div class="cat-title">Banarasi</div>
-          <div class="cat-sub">Classic zari</div>
-        </a>
-        <a class="cat-tile" href="products.html#kanjivaram">
-          <div class="cat-title">Kanjivaram</div>
-          <div class="cat-sub">Iconic weaves</div>
-        </a>
+      <div id="homeCategoryTiles" class="category-tiles">
+        <div class="small">Loading categories…</div>
+      </div>
+    </section>
+
+    <!-- Curated collections (from backend) -->
+    <section class="section">
+      <div class="section-head">
+        <h2 class="section-title">Curated Collections</h2>
+        <a class="section-link" href="collections.html">View all</a>
+      </div>
+
+      <div id="homeCollectionTiles" class="category-tiles">
+        <div class="small">Loading collections…</div>
       </div>
     </section>
 
@@ -133,7 +129,7 @@
       </div>
 
       <div id="bestsellersStatus" class="small" style="margin-bottom:10px;"></div>
-      <div id="bestsellersGrid" class="grid grid-3"></div>
+      <div id="bestsellersGrid" class="grid grid-4"></div>
     </section>
 
     <!-- New Collection -->
@@ -144,13 +140,24 @@
       </div>
 
       <div id="newCollectionStatus" class="small" style="margin-bottom:10px;"></div>
-      <div id="newCollectionGrid" class="grid grid-3"></div>
+      <div id="newCollectionGrid" class="grid grid-4"></div>
     </section>
+
+
+    <!-- Testimonials -->
+    <section class="section">
+      <div class="section-head">
+        <h2 class="section-title">Loved by customers across India</h2>
+      </div>
+
+      <div id="testimonialsGrid" class="t-compact-grid"></div>
+    </section>
+
 
   </div>
 
   <!-- Floating CTA (WhatsApp-like) -->
-  <a class="floating-cta" href="https://wa.me/919582297550?text=Hi%20Ahamstree%20team%2C%20I%20need%20help%20with%20my%20order." target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+  <a class="floating-cta" href="https://wa.me/919582297550?text=Hi%20Ahamstree%20team%2C%20I%20need%20help%20with%20my%20order." target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
     <span class="floating-cta-dot" aria-hidden="true"></span>
     Need help?
   </a>
@@ -167,6 +174,42 @@
 
     // Home page dynamic sections
     hydrateHome();
+
+    // Testimonials (static for now)
+    // Testimonials (static for now)
+const testimonials = [
+  { quote: "Beautiful weave and the saree looked even better in person. Packaging was premium.", name: "Babita", place: "Gurgaon", stars: 5, img: "assets/images/testimonials/babita.jpg" },
+  { quote: "Fast delivery and super helpful support on WhatsApp. Loved the fabric quality.", name: "Sudha", place: "Rewari", stars: 5, img: "assets/images/testimonials/babita.jpg" },
+  { quote: "Exactly as shown. The drape is gorgeous and the blouse piece was perfect.", name: "Neetu", place: "Jamalpur", stars: 5, img: "assets/images/testimonials/babita.jpg" },
+  { quote: "Great gifting experience. My mom loved it and asked for another one!", name: "Nisha", place: "Gurgaon", stars: 5, img: "assets/images/testimonials/babita.jpg" },
+  { quote: "Elegant and lightweight. Perfect for functions and easy to carry.", name: "Shikha", place: "Gurgaon", stars: 5, img: "assets/images/testimonials/babita.jpg" },
+  { quote: "The craftsmanship is excellent. Will definitely order again.", name: "Rachna", place: "Gurgaon", stars: 5, img: "assets/images/testimonials/babita.jpg" },
+];
+
+
+    const stars = (n) => "★★★★★".slice(0, Math.max(0, Math.min(5, Number(n || 0))));
+
+    const tGrid = document.getElementById("testimonialsGrid");
+    if (tGrid) {
+      tGrid.innerHTML = testimonials.map(t => `
+        <div class="card t-compact-card">
+          <div class="t-compact-stars">${stars(t.stars)}</div>
+          <div class="t-compact-quote">"${t.quote}"</div>
+          <div class="t-compact-foot">
+            <div class="t-compact-avatar">
+              <img src="${t.img}" alt="${t.name}" loading="lazy"
+                   onerror="this.style.display='none';this.parentElement.dataset.initial='${t.name.charAt(0)}'">
+            </div>
+            <div>
+              <div class="t-compact-name">${t.name}</div>
+              <div class="t-compact-place">${t.place}</div>
+            </div>
+          </div>
+        </div>
+      `).join("");
+    }
+
+
 
     // Simple hero carousel (no dependencies)
     const track = document.querySelector(".hero-track");
